--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -17,10 +17,35 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="t54-hh-Rzu">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DishCell" id="YX0-YL-zTV">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YX0-YL-zTV" id="Q3a-qt-6YU">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="t54-hh-Rzu" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="VHW-eb-ZDV"/>
+                            <constraint firstItem="t54-hh-Rzu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Wav-xF-HdU"/>
+                            <constraint firstItem="t54-hh-Rzu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="orL-35-7Oe"/>
+                            <constraint firstItem="t54-hh-Rzu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tFS-eB-HQY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="National Dishes" id="5C1-El-GPL"/>
+                    <connections>
+                        <outlet property="tableView" destination="t54-hh-Rzu" id="pCX-4p-FYZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
