--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -10,6 +10,57 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Add National Dish-->
+        <scene sceneID="CeG-sP-FZn">
+            <objects>
+                <viewController storyboardIdentifier="AddDishViewController" id="EOU-Y4-lJT" customClass="AddDishViewController" customModule="NationalDish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jcu-FG-B3v">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="looking forward to reading about your national dish....." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zwL-Sd-ztk">
+                                <rect key="frame" x="8" y="72" width="359" height="220"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="ss0-qN-qB6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1tr-q8-iwN">
+                                <rect key="frame" x="0.0" y="305" width="375" height="362"/>
+                                <state key="normal" image="placeholder-image"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1tr-q8-iwN" firstAttribute="height" secondItem="NYj-Av-kYe" secondAttribute="height" multiplier="0.6" id="6X7-Gi-va3"/>
+                            <constraint firstItem="1tr-q8-iwN" firstAttribute="trailing" secondItem="NYj-Av-kYe" secondAttribute="trailing" id="CMT-Dx-VcJ"/>
+                            <constraint firstItem="zwL-Sd-ztk" firstAttribute="leading" secondItem="NYj-Av-kYe" secondAttribute="leading" constant="8" id="WMo-Q5-DGc"/>
+                            <constraint firstItem="1tr-q8-iwN" firstAttribute="bottom" secondItem="NYj-Av-kYe" secondAttribute="bottom" id="c32-6j-b35"/>
+                            <constraint firstItem="1tr-q8-iwN" firstAttribute="leading" secondItem="NYj-Av-kYe" secondAttribute="leading" id="cL2-c8-e9D"/>
+                            <constraint firstItem="zwL-Sd-ztk" firstAttribute="trailing" secondItem="NYj-Av-kYe" secondAttribute="trailing" constant="-8" id="heN-mm-BLE"/>
+                            <constraint firstItem="zwL-Sd-ztk" firstAttribute="top" secondItem="NYj-Av-kYe" secondAttribute="top" constant="8" id="igh-IH-5Gv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NYj-Av-kYe"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add National Dish" id="7Wj-vW-nj4">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7yE-VQ-zvy">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="EOU-Y4-lJT" id="dEu-8v-3WT"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="7Cu-u9-Rav">
+                            <connections>
+                                <action selector="addDishButtonPressed:" destination="EOU-Y4-lJT" id="b5R-go-mpo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ty-wE-aCj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2874.4000000000001" y="-663.41829085457277"/>
+        </scene>
         <!--National Dishes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -22,12 +73,32 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DishCell" id="YX0-YL-zTV">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DishCell" textLabel="oJ3-R5-3az" detailTextLabel="4Qx-W2-a1F" imageView="ERo-6P-wkk" style="IBUITableViewCellStyleSubtitle" id="YX0-YL-zTV">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YX0-YL-zTV" id="Q3a-qt-6YU">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oJ3-R5-3az">
+                                                    <rect key="frame" x="74" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Qx-W2-a1F">
+                                                    <rect key="frame" x="74" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="placeholder-image" id="ERo-6P-wkk">
+                                                    <rect key="frame" x="15" y="0.0" width="44" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -42,7 +113,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="National Dishes" id="5C1-El-GPL"/>
+                    <navigationItem key="navigationItem" title="National Dishes" id="5C1-El-GPL">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="1dP-qZ-pLn">
+                            <connections>
+                                <segue destination="4Yl-fb-3Sk" kind="presentation" identifier="Add Dish" id="zf4-4M-6t3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="t54-hh-Rzu" id="pCX-4p-FYZ"/>
                     </connections>
@@ -124,5 +201,26 @@
             </objects>
             <point key="canvasLocation" x="154" y="406"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bZC-7o-gYT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Yl-fb-3Sk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GgG-bQ-Jf3">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EOU-Y4-lJT" kind="relationship" relationship="rootViewController" id="Al4-eo-Dy7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8s2-BU-3Iz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1934" y="-663"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="placeholder-image" width="512" height="512"/>
+    </resources>
 </document>
