--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -19,27 +19,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Looking forward to reading about your national dish....." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zwL-Sd-ztk">
-                                <rect key="frame" x="8" y="72" width="359" height="220"/>
+                                <rect key="frame" x="8" y="128" width="359" height="160"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="220" id="ss0-qN-qB6"/>
+                                    <constraint firstAttribute="height" constant="160" id="ss0-qN-qB6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-image" translatesAutoresizingMaskIntoConstraints="NO" id="qJW-P5-MNw">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-image" translatesAutoresizingMaskIntoConstraints="NO" id="qJW-P5-MNw">
                                 <rect key="frame" x="0.0" y="305" width="375" height="362"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter country" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P5T-NR-Kab">
+                                <rect key="frame" x="16" y="80" width="343" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5pa-Fq-lW2"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qJW-P5-MNw" firstAttribute="trailing" secondItem="NYj-Av-kYe" secondAttribute="trailing" id="8yb-Up-iLl"/>
                             <constraint firstItem="qJW-P5-MNw" firstAttribute="leading" secondItem="NYj-Av-kYe" secondAttribute="leading" id="EuE-BD-nXJ"/>
+                            <constraint firstItem="zwL-Sd-ztk" firstAttribute="top" secondItem="P5T-NR-Kab" secondAttribute="bottom" constant="8" id="IyF-l3-DF4"/>
+                            <constraint firstItem="P5T-NR-Kab" firstAttribute="top" secondItem="NYj-Av-kYe" secondAttribute="top" constant="16" id="NuL-Zv-lEF"/>
                             <constraint firstItem="qJW-P5-MNw" firstAttribute="height" secondItem="NYj-Av-kYe" secondAttribute="height" multiplier="0.6" id="QB6-Fz-WSM"/>
                             <constraint firstItem="qJW-P5-MNw" firstAttribute="bottom" secondItem="NYj-Av-kYe" secondAttribute="bottom" id="SEu-nT-Trx"/>
+                            <constraint firstItem="P5T-NR-Kab" firstAttribute="leading" secondItem="NYj-Av-kYe" secondAttribute="leading" constant="16" id="SWI-Cf-Taj"/>
                             <constraint firstItem="zwL-Sd-ztk" firstAttribute="leading" secondItem="NYj-Av-kYe" secondAttribute="leading" constant="8" id="WMo-Q5-DGc"/>
+                            <constraint firstItem="NYj-Av-kYe" firstAttribute="trailing" secondItem="P5T-NR-Kab" secondAttribute="trailing" constant="16" id="gJn-qf-gOX"/>
                             <constraint firstItem="zwL-Sd-ztk" firstAttribute="trailing" secondItem="NYj-Av-kYe" secondAttribute="trailing" constant="-8" id="heN-mm-BLE"/>
-                            <constraint firstItem="zwL-Sd-ztk" firstAttribute="top" secondItem="NYj-Av-kYe" secondAttribute="top" constant="8" id="igh-IH-5Gv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NYj-Av-kYe"/>
                     </view>
@@ -56,7 +69,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="countryTextField" destination="P5T-NR-Kab" id="q6K-LL-or1"/>
                         <outlet property="dishDescriptionTextView" destination="zwL-Sd-ztk" id="J6h-o5-gi5"/>
+                        <outlet property="dishImageView" destination="qJW-P5-MNw" id="rBg-6r-TpU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Ty-wE-aCj" userLabel="First Responder" sceneMemberID="firstResponder"/>
