added todo's and updated profile view

--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -128,24 +128,49 @@
         <!--Profile-->
         <scene sceneID="U9u-1W-00f">
             <objects>
-                <viewController id="MXZ-iQ-9Yb" sceneMemberID="viewController">
+                <viewController id="MXZ-iQ-9Yb" customClass="ProfileViewController" customModule="NationalDish" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SHQ-Rt-SY4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OCl-8c-XCP">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DishCell" id="K7E-wT-l8i" customClass="DishCell" customModule="NationalDish" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K7E-wT-l8i" id="pe8-qT-TvK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="OCl-8c-XCP" firstAttribute="top" secondItem="yGT-uz-LYG" secondAttribute="top" id="FPo-oB-WlF"/>
+                            <constraint firstItem="OCl-8c-XCP" firstAttribute="trailing" secondItem="yGT-uz-LYG" secondAttribute="trailing" id="mBP-ag-AAp"/>
+                            <constraint firstItem="OCl-8c-XCP" firstAttribute="leading" secondItem="yGT-uz-LYG" secondAttribute="leading" id="sYh-jF-ng7"/>
+                            <constraint firstItem="OCl-8c-XCP" firstAttribute="bottom" secondItem="yGT-uz-LYG" secondAttribute="bottom" id="tcu-Zz-BFK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yGT-uz-LYG"/>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="PUn-AP-CDL"/>
+                    <connections>
+                        <outlet property="tableView" destination="OCl-8c-XCP" id="r78-cu-N9U"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4B-Ex-18B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1935" y="758"/>
+            <point key="canvasLocation" x="1933.5999999999999" y="757.87106446776613"/>
         </scene>
         <!--National Dishes-->
         <scene sceneID="u2c-vl-t0T">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9vA-Sg-5tH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="National Dishes" id="IqB-tB-mEp"/>
+                    <tabBarItem key="tabBarItem" title="National Dishes" image="dish-icon" id="IqB-tB-mEp"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qb0-Cj-rYM">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -164,7 +189,7 @@
         <scene sceneID="uBA-6L-NIk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iIQ-NX-EPG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="Scy-7p-pNo"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile-icon" id="Scy-7p-pNo"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GtD-ab-6Tm">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -218,6 +243,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="dish-icon" width="21.75" height="21.75"/>
         <image name="placeholder-image" width="512" height="512"/>
+        <image name="profile-icon" width="29" height="29"/>
     </resources>
 </document>
