--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -97,6 +97,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Bzt-zB-glE" kind="show" identifier="Show Dish Details" id="qNE-Yn-isA"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -124,6 +127,100 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1935.2" y="26.53673163418291"/>
+        </scene>
+        <!--Dish Details-->
+        <scene sceneID="aQP-uA-zCC">
+            <objects>
+                <viewController storyboardIdentifier="DishDetailViewController" id="Bzt-zB-glE" customClass="DishDetailViewController" customModule="NationalDish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="03h-im-e4X">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xR1-62-FVI">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EOL-9j-bC5" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qMM-cu-SHs">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="k8N-m0-ACh"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jiV-HY-EBe">
+                                                <rect key="frame" x="8" y="308" width="359" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9P-bq-pMY">
+                                                <rect key="frame" x="8" y="335.5" width="359" height="21"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="dish description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76M-LM-1n4">
+                                                <rect key="frame" x="8" y="365" width="359" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="76M-LM-1n4" firstAttribute="leading" secondItem="EOL-9j-bC5" secondAttribute="leading" constant="8" id="2g6-bM-avJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="jiV-HY-EBe" secondAttribute="trailing" constant="8" id="6Vb-KN-YGR"/>
+                                            <constraint firstAttribute="bottom" secondItem="76M-LM-1n4" secondAttribute="bottom" constant="278" id="Dj6-U0-zmk"/>
+                                            <constraint firstAttribute="trailing" secondItem="qMM-cu-SHs" secondAttribute="trailing" id="IIo-qI-8sZ"/>
+                                            <constraint firstItem="qMM-cu-SHs" firstAttribute="leading" secondItem="EOL-9j-bC5" secondAttribute="leading" id="SsN-gW-e6g"/>
+                                            <constraint firstAttribute="trailing" secondItem="76M-LM-1n4" secondAttribute="trailing" constant="8" id="YRP-Tc-v77"/>
+                                            <constraint firstItem="76M-LM-1n4" firstAttribute="top" secondItem="j9P-bq-pMY" secondAttribute="bottom" constant="8.5" id="ax1-AH-7cW"/>
+                                            <constraint firstItem="jiV-HY-EBe" firstAttribute="leading" secondItem="EOL-9j-bC5" secondAttribute="leading" constant="8" id="cAe-9L-z3h"/>
+                                            <constraint firstItem="qMM-cu-SHs" firstAttribute="top" secondItem="EOL-9j-bC5" secondAttribute="top" id="g6P-Jw-cQk"/>
+                                            <constraint firstItem="jiV-HY-EBe" firstAttribute="top" secondItem="qMM-cu-SHs" secondAttribute="bottom" constant="8" id="jZL-J6-E1g"/>
+                                            <constraint firstItem="j9P-bq-pMY" firstAttribute="leading" secondItem="EOL-9j-bC5" secondAttribute="leading" constant="8" id="pqr-FJ-PMK"/>
+                                            <constraint firstAttribute="trailing" secondItem="j9P-bq-pMY" secondAttribute="trailing" constant="8" id="ruc-Nv-faM"/>
+                                            <constraint firstItem="j9P-bq-pMY" firstAttribute="top" secondItem="jiV-HY-EBe" secondAttribute="bottom" constant="8" id="wO3-sg-K9J"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="EOL-9j-bC5" secondAttribute="bottom" id="1Sb-Hd-Txn"/>
+                                    <constraint firstAttribute="trailing" secondItem="EOL-9j-bC5" secondAttribute="trailing" id="7Vp-xV-gEa"/>
+                                    <constraint firstItem="EOL-9j-bC5" firstAttribute="leading" secondItem="xR1-62-FVI" secondAttribute="leading" id="9mG-h1-CWa"/>
+                                    <constraint firstItem="EOL-9j-bC5" firstAttribute="top" secondItem="xR1-62-FVI" secondAttribute="top" id="oyY-y1-IFj"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EOL-9j-bC5" firstAttribute="height" secondItem="03h-im-e4X" secondAttribute="height" priority="750" id="4my-dR-crI"/>
+                            <constraint firstItem="xR1-62-FVI" firstAttribute="top" secondItem="pqU-Xh-hIR" secondAttribute="top" id="GSK-FR-qs1"/>
+                            <constraint firstItem="xR1-62-FVI" firstAttribute="bottom" secondItem="pqU-Xh-hIR" secondAttribute="bottom" id="Qa5-2P-Mrt"/>
+                            <constraint firstItem="EOL-9j-bC5" firstAttribute="width" secondItem="03h-im-e4X" secondAttribute="width" id="dQj-bC-Id1"/>
+                            <constraint firstItem="xR1-62-FVI" firstAttribute="trailing" secondItem="pqU-Xh-hIR" secondAttribute="trailing" id="maz-lJ-EJO"/>
+                            <constraint firstItem="xR1-62-FVI" firstAttribute="leading" secondItem="pqU-Xh-hIR" secondAttribute="leading" id="vi3-E7-fs3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pqU-Xh-hIR"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Dish Details" id="Zul-CD-cLa">
+                        <barButtonItem key="rightBarButtonItem" image="more-info-circle" id="wxY-Ak-5Q8">
+                            <connections>
+                                <action selector="moreInfoButtonPressed:" destination="Bzt-zB-glE" id="iGT-rR-LOX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="countryNameLabel" destination="j9P-bq-pMY" id="06h-hv-Amp"/>
+                        <outlet property="dishDescriptionLabel" destination="76M-LM-1n4" id="KPh-ft-VZC"/>
+                        <outlet property="dishImageView" destination="qMM-cu-SHs" id="TdT-q4-Bah"/>
+                        <outlet property="displayNameLabel" destination="jiV-HY-EBe" id="Ueh-VT-Ord"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XiX-6h-P75" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3708" y="26.53673163418291"/>
         </scene>
         <!--Profile-->
         <scene sceneID="U9u-1W-00f">
@@ -244,6 +341,7 @@
     </scenes>
     <resources>
         <image name="dish-icon" width="21.75" height="21.75"/>
+        <image name="more-info-circle" width="37.5" height="37.5"/>
         <image name="placeholder-image" width="512" height="512"/>
         <image name="profile-icon" width="29" height="29"/>
     </resources>
