selection style set to none for dish cell

--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -508,6 +508,6 @@
         <image name="profile-icon" width="29" height="29"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kla-aU-aS7"/>
+        <segue reference="qNE-Yn-isA"/>
     </inferredMetricsTieBreakers>
 </document>
