annotated in class review

--- a/NationalDish/Storyboards/LoginView.storyboard
+++ b/NationalDish/Storyboards/LoginView.storyboard
@@ -188,7 +188,7 @@
         <!--Navigation Controller-->
         <scene sceneID="0Jf-Nb-GHh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3HP-9A-LuB" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="LoginViewNavController" automaticallyAdjustsScrollViewInsets="NO" id="3HP-9A-LuB" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wRl-2o-ORk">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
